<resources>
    <string name="app_name">HarryPotterApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hogwarts_character_list">HOGWARTS CHARACTER LIST</string>
    <string name="GRYFFINDOR">GRYFFINDOR</string>
    <string name="SLYTHERIN">SLYTHERIN</string>
    <string name="HUFFLEPUFF">HUFFLEPUFF</string>
    <string name="RAVENCLAW">RAVENCLAW</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wand_details">WAND DETAILS</string>
    <string name="first_text">This app lists all the characters of the Harry Potter Movie. They are divided as Staff and Students of Hogwarts.             Click on the button to view them</string>
    <string name="STAFF">STAFF</string>
    <string name="STUDENTS">STUDENTS</string>

</resources>